--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@storybook/addon-knobs": "^5.0.11",
     "@storybook/addon-notes": "^5.0.11",
+    "polished": "^3.3.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
